Fix z-index

--- a/sass/navigation/_nav.scss
+++ b/sass/navigation/_nav.scss
@@ -8,6 +8,7 @@
 
   @media (max-width: $responsivenav) {
     padding: 4rem;
+    z-index: 0;
   }
 
   @media (max-width: $container-mobile) {
